# ERGBootCamp

./: .gitignore  README.md  project_folder_structure.md  pyproject.toml
coaching/prompts/: daily_coach_prompt.md  weekly_review_prompt.md
config/: .env.example  settings.yaml
launchd/: com.ergbootcamp.daily_brief.plist  com.ergbootcamp.weekly_plan.plist
pipelines/: build_daily_metrics.py  coaching_memory.py  config_loader.py  dashboard.py  generate_coaching.py  generate_daily_brief.py  generate_weekly_plan.py  hello_duckdb.py  import_garmin.py  ingest_manual_metrics.py  pull_concept2.py  send_discord.py  send_whatsapp.py  sync_state.sql  workout_intervals.sql
pipelines/coaching_context/: __init__.py  calibration.py  injector.py  llm_call.py  models.py  modes.py  pep.py  quarantine.py  scoring.py
scripts/: install_launchd.sh  run_pipeline.sh  run_weekly_planning.sh  start_dashboard.sh
semantic/: schema.sql  views.sql
tests/: test_coaching_context.py  test_coaching_memory.py  test_send_discord.py  test_sit_discord.py
